ocfl-java-itest/src/test/resources/invalid-repos/bad-logical-paths/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v6/inventory.json.sha512
abeb74612461ad2ad04ba3ddd2b7058ca069773a64eec724191d0db43b03b3eb88104095e9077266be6d91cd6a648cbfb4ea18cb45896c3f86f50aa4e67738ec  inventory.json
